# quickdashboard

./: CMakeLists.txt  Makefile  README.md  mongocxx_installer.sh
include/: mongo_handler.h
qtUi/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
qtUi/templates/: MSFT_candlestick.html
src/: database.cpp  graphs.ipynb  graphs.py  main.cpp  mongo_handler.h  pyGraphs.cpp  stocks.html  test.html
ui/: main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
